--- a/publications.html
+++ b/publications.html
@@ -79,10 +79,36 @@
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp; <span class="incline"> Notice: The copyright of these papers is with the respective publishers. It is being reproduced here for timely dissemination of scholarly information.   </span> &nbsp; &nbsp;</p>
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp; <span class="incline"> NOTE: * = the correspondence author of papers with my supervised students or team members </span> &nbsp; &nbsp;</p>
 
+
+<p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red">Working/Preprints Papers </span></p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[w00] Fog Orchestration and Simulation for IoT Services <a href="">[paper]</a>  &nbsp;</span></p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> Book Chapter, Fog and Fogonomics
+Challenges and Practices of Fog Computing, Networking, Strategy, and Economics.  Editor: Yang Yang. Wiley </span> &nbsp; &nbsp;</p>
+ <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em> <strong>Renyu Yang</strong>, Zhenyu Wen,  David Mckee, Tao Lin, Jie Xu and Peter Garraghan &nbsp;</em></span><em>&nbsp;</em>&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;</p>
+
+ 
+ <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[w00]  GaeaNet: Scalable and Flexible Network Service Chain as a Service in Multi-tenant Environments
+<a href="">[paper]</a>  &nbsp;</span></p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline">  submitted to IEEE Computer, IEEE Computer Society </span> &nbsp; &nbsp;</p>
+ <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em> <strong>Renyu Yang</strong>, Zhenyu Wen,  Jie Xu, Massimo Villari, Schahram Dustdar, Rajiv Ranjan &nbsp;</em></span><em>&nbsp;</em>&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;</p>
+
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[w00]   GA-Par:  Dependability Aware Microservice Orchestration Framework for Geo-distributed Clouds 
+ <a href="">[paper]</a>  &nbsp;</span></p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline">  submitted to IEEE Transactions on Parallel and Distributed Systems  </span> &nbsp; &nbsp;</p>
+ <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em> Zhenyu Wen, Tao Lin, <strong>Renyu Yang*</strong>, Shouling Ji, Rajiv Ranjan, Alexander Romanovsky, Changting Lin, Jie Xu &nbsp;</em>&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;</p>
+
+ 
+
+
+
+ 
+
+
+
 <p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red">2018</span></p>
 
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[j5]  Emergent Failures: Rethinking Reliable Cloud Datacenters at Scale <a href="">[paper]</a>  &nbsp;</span></p>
-<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> IEEE Cloud Computing magazine, 2018, IEEE Computer Society (SCI-IF = 2.929)  </span> &nbsp; &nbsp;</p> <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em> Peter Garraghan, <strong>Renyu Yang*</strong>, Zhenyu Wen,  Alexander Romanovsky, Jie Xu, Rajkumar Buyya, Rajiv Ranjan &nbsp;</em></span><em>&nbsp;</em>&nbsp;  &nbsp;&nbsp; &nbsp;&nbsp;</p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> IEEE Cloud Computing, 2018, IEEE Computer Society (SCI-IF = 2.929)  </span> &nbsp; &nbsp;</p> <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em> Peter Garraghan, <strong>Renyu Yang*</strong>, Zhenyu Wen,  Alexander Romanovsky, Jie Xu, Rajkumar Buyya, Rajiv Ranjan &nbsp;</em></span><em>&nbsp;</em>&nbsp;  &nbsp;&nbsp; &nbsp;&nbsp;</p>
 
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[c21]  ROSE: Cluster Resource Scheduling via Speculative Over-subscription <a href="paper/icdcs2018.pdf">[paper]</a>  &nbsp;</span></p>
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> The 38th IEEE International Conference on Distributed Computing Systems (ICDCS 2018), Vienna, Austria </span> &nbsp; &nbsp;</p> <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em> Xiaoyang Sun, Chunming Hu, <strong>Renyu Yang*</strong>,Peter Garraghan, Tianyu Wo, Jie Xu, Jianyong Zhu, Chao Li &nbsp;</em></span><em>&nbsp;</em>&nbsp;  &nbsp;&nbsp; &nbsp;&nbsp;</p>
