--- a/publications_topics.html
+++ b/publications_topics.html
@@ -91,6 +91,12 @@
  
 <p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red">Topic: Massive-scale Resource Management and Orchestration </span></p>
 
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[b2] Fog Orchestration and Simulation for IoT Services <a href="">[paper]</a>  &nbsp;</span></p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> Book Chapter, Fog and Fogonomics
+Challenges and Practices of Fog Computing, Networking, Strategy, and Economics,  Wiley, 2019 (in press) </span> </p>
+ <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em> <strong>Renyu Yang</strong>, Zhenyu Wen,  David Mckee, Tao Lin, Jie Xu and Peter Garraghan &nbsp;</em></span><em>&nbsp;</em>&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;</p>
+
+
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[8]  
 ROSE: Cluster Resource Scheduling via Speculative Over-subscription <a href="paper/icdcs2018.pdf">[paper]</a>  &nbsp;</span></p>
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> The 38th IEEE International Conference on Distributed Computing Systems (ICDCS 2018), Vienna, Austria </span> &nbsp; &nbsp;</p> 
@@ -131,7 +137,7 @@ ROSE: Cluster Resource Scheduling via Speculative Over-subscription <a href="pap
 
 <p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red">Topic: Fault-Tolerance and Reliability in Scheduling </span></p>
 
-<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[8]  Emergent Failures: Rethinking Reliable Cloud Datacenters at Scale <a href="">[paper]</a>  &nbsp;</span></p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[8]  Emergent Failures: Rethinking  Cloud Reliability at Scale <a href="">[paper]</a>  &nbsp;</span></p>
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> IEEE Cloud Computing magazine, 2018, IEEE Computer Society (SCI-IF = 2.929)  </span> &nbsp; &nbsp;</p> <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em> Peter Garraghan, <strong>Renyu Yang*</strong>, Zhenyu Wen,  Alexander Romanovsky, Jie Xu, Rajkumar Buyya, Rajiv Ranjan &nbsp;</em></span><em>&nbsp;</em>&nbsp;  &nbsp;&nbsp; &nbsp;&nbsp;</p>
 
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[7] Efficient and Reliable Resource Scheduling at Internet Scale: Theory and Practice </span></p>
