--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 <div align="left">
 &nbsp;
 </div>
-<p class="style11"><span class="name">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <img src="images/yangry2017.jpg" height="350" width="238"></span></p>
+<p class="style11"><span class="name">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <img src="images/yangry2017a.jpg" height="350" width="278"></span></p>
 </td>
 
 <td width="796" align="right">
