--- a/index.html
+++ b/index.html
@@ -105,7 +105,6 @@
 <!-- p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Office (BJ):&nbsp; Room G504, New Main Building, No.37,Xueyuan Rd.,Haidian District,Beijing, China, 100191.&nbsp;</p-->
 
 
-<p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Email: renyu.yang AT buaa DOT edu DOT cn or  </p>
 <p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;  &nbsp;  r.yang1 AT leeds DOT ac DOT uk  or &nbsp; </p>
 <p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;  &nbsp;  renyu.yang AT edgetic DOT com &nbsp; </p>
 <p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Links: &nbsp;&nbsp;
@@ -130,10 +129,11 @@
 </a> 
 
 <p class="Bolder">&nbsp;&nbsp;&nbsp;  What's new </p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; [TOP] Call for Papers:  <a href="https://jointcloud.github.io/jcc2019/cfp/" >IEEE JCC 2019</a> </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (01/10/2018) The chapter entitled "Fog Orchestration and Simulation for IoT Services" is accepted to publish in the book of "Fog and Fogonomics: Challenges and Practices of Fog Computing, Networking, Strategy, and Economics"  by Wiley .
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (01/10/2018) The chapter entitled "Fog Orchestration and Simulation for IoT Services" is accepted to publish in the book of "Fog and Fogonomics: Challenges and Practices of Fog Computing, Networking, Strategy, and Economics"  by Wiley . </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (16/07/2018) I has been invited to serve as IEEE JCC 2019 PC co-chair.
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (16/07/2018) I has been invited to serve as IEEE JCC 2019 PC co-chair. </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (05/04/2018) The work of "ROSE: Cluster Resource Scheduling via Speculative Over-subscription" is accepted as a full paper and will appear in IEEE ICDCS 2018. Big Congrats!  </span></p>
 
@@ -289,7 +289,7 @@ I has published more than 25 peer-reviewed papers in the field of distributed sy
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  </span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  updated by 5th May, 2018 </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  updated by 18th October, 2018 </span></p>
 
 </body>
 </html>
