--- a/publications.html
+++ b/publications.html
@@ -247,6 +247,6 @@ Multi-Tenants Cloud Environments <a href="paper/hase2016.pdf">[paper]</a>&nbsp; 
 Renyu Yang</strong>, Jie Xu, Tianyu Wo&nbsp;</em></span>&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;</p>
  
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> </span> &nbsp; &nbsp;</p>
-<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> Updated by April 5th, 2018 </span> &nbsp; &nbsp;</p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> Updated by October, 2018 </span> &nbsp; &nbsp;</p>
 </body>
 </html>
