--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 &nbsp;
 </div>
 <p class="STYLE16">&nbsp;&nbsp;&nbsp;&nbsp; "I find that the harder I work, the more luck I seem to have."  - Thomas Jefferson</p>
-<p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Head of Scheduling Group, Research Scientist, Lead R&D Engineer, Edgetic Ltd., UK </p>
+<p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Research Scientist, Lead R&D Engineer, Edgetic Ltd., UK </p>
 <p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Research Fellow, School of Computing, <a href="http://www.leeds.ac.uk">University of Leeds</a>, UK </p>
 
 <!-- p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Research Scientist, <a href="http://www.bdbc.org.cn/?lang=en">Big Data and Brain Computing Research Center(BDBC)</a>, <a href="http://www.buaa.edu.cn">Beihang University (aka. BUAA)</a>, China </p -->
@@ -105,7 +105,7 @@
 <!-- p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Office (BJ):&nbsp; Room G504, New Main Building, No.37,Xueyuan Rd.,Haidian District,Beijing, China, 100191.&nbsp;</p-->
 
 
-<p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;  &nbsp;  r.yang1 AT leeds DOT ac DOT uk  or &nbsp; </p>
+<p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Email: r.yang1 AT leeds DOT ac DOT uk  or &nbsp; </p>
 <p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;  &nbsp;  renyu.yang AT edgetic DOT com &nbsp; </p>
 <p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Links: &nbsp;&nbsp;
 <a href="http://uk.linkedin.com/pub/renyu-yang/60/b5b/96/" target="_blank">
@@ -129,7 +129,7 @@
 </a> 
 
 <p class="Bolder">&nbsp;&nbsp;&nbsp;  What's new </p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; [TOP] Call for Papers:  <a href="https://jointcloud.github.io/jcc2019/cfp/" >IEEE JCC 2019</a> </span></p>
+<p><span class="red">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; [TOP] Call for Papers:  <a href="https://jointcloud.github.io/jcc2019/cfp/" >IEEE JCC 2019</a> </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (01/10/2018) The chapter entitled "Fog Orchestration and Simulation for IoT Services" is accepted to publish in the book of "Fog and Fogonomics: Challenges and Practices of Fog Computing, Networking, Strategy, and Economics"  by Wiley . </span></p>
 
@@ -143,7 +143,7 @@
 
 
 <p class="Bolder">&nbsp;&nbsp;&nbsp;  Short Bio &nbsp;</p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  I am currently the head of the Scheduling Group at Edgetic Ltd. UK and a research fellow with the school of computing, University of Leeds, UK.  I am also a visiting research scientist with the <a href="http://www.bdbc.org.cn/?lang=en">Big Data and Brain Computing Research Center(BDBC)</a>, <a href="http://www.buaa.edu.cn">Beihang University (aka. BUAA)</a>, China.
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  I am currently the head of the scheduling topic at Edgetic Ltd. UK and a research fellow with the school of computing, University of Leeds, UK.  I am also a visiting research scientist with the <a href="http://www.bdbc.org.cn/?lang=en">Big Data and Brain Computing Research Center (BDBC)</a>, <a href="http://www.buaa.edu.cn">Beihang University (aka. BUAA)</a>, China.
 I led several China national or international projects in terms of distributed resource scheduling, cloud storage and geo-distributed data processing for intelligent decision making and massive-scale data analysis. We are building large-scale resource management infrastructures and system profiling framework to support those functionalities. My research mainly focuses on: 
 1) scalable and intelligent resource scheduling at Internet scale; 
 2) dependable service provisioning by leveraging effective system failover, long-tail task mitigation, and  quantitative reliability modeling etc.; 
@@ -151,7 +151,7 @@ I led several China national or international projects in terms of distributed r
 and 4) geo-distributed data processing, etc. 
 I has published more than 25 peer-reviewed papers in the field of distributed systems and cloud computing. Those works appeared in top journals and conference proceedings such as IEEE Transactions on Services Computing, IEEE Internet Computing, VLDB, IEEE ICDCS, IEEE DSN, ACM SOSP(poster), USENIX LISA, IEEE HASE, IEEE ICPADS etc. One of the works won the Best Paper Award in IEEE ISADS 2013. I was awarded the Grand Class of Scientific and Technological Progress Award of Chinese Institute of Electronics of year 2017 (the only grand class award since the award is established) for the key participations and contributions to the reliable resource management and scheduling at massive scale.  
 </span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;   I obtained my B.Sc. and Ph.D. from School of Computing, <a href="http://www.buaa.edu.cn">Beihang University (aka. BUAA)</a>, China  in June 2011 and January 2017 respectively.   In the past few years, I had been working both in the Networked Computing Group (NCG) in Beihang University and Distributed Systems and Services (DSS) lab in the University of Leeds.  I was the founder and team lead of SIGRS (Special Interest Group on Resource Scheduling) and MSDS (Massive-Scale Distributed Systems) research group at Beihang University.  I had led several UK-China research collaborations including the COLAB (short for Leeds, Alibaba, Beihang) project and developed strong links with the UK Computer Science community (such as University of Leeds, University of Edinburgh, Lancaster University etc.). During 2014 to 2016, I also joined Fuxi the Distributed Resource Scheduling Group in Alibaba Cloud Inc., participating in the development and research on cloud system issues at Internet scale.  I am a member of&nbsp;<a href="http://www.acm.org" target="_blank">ACM</a>, IEEE and&nbsp;<a href="http://www.ccf.org.cn">CCF(China Computer Federation)</a>.
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;   I obtained my B.Sc. and Ph.D. from School of Computing, <a href="http://www.buaa.edu.cn">Beihang University </a>, China  in June 2011 and January 2017 respectively.   In the past few years, I had been working both in the Networked Computing Group (NCG) in Beihang University and Distributed Systems and Services (DSS) lab in the University of Leeds.  I was the founder and team lead of SIGRS (Special Interest Group on Resource Scheduling) and MSDS (Massive-Scale Distributed Systems) research group at Beihang University.  I had led several UK-China research collaborations including the COLAB (short for Leeds, Alibaba, Beihang) project and developed strong links with the UK Computer Science community (such as University of Leeds, University of Edinburgh, Lancaster University etc.). During 2014 to 2016, I also joined Fuxi the Distributed Resource Scheduling Group in Alibaba Cloud Inc., participating in the development and research on cloud system issues at Internet scale.  I am a member of&nbsp;<a href="http://www.acm.org" target="_blank">ACM</a>, IEEE and&nbsp;<a href="http://www.ccf.org.cn">CCF(China Computer Federation)</a>.
 </span></p>
 
 
@@ -182,6 +182,8 @@ I has published more than 25 peer-reviewed papers in the field of distributed sy
 
 
 <p><span class="Bolder"> &nbsp;&nbsp;&nbsp; Selected Publications &nbsp; </span></p>
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; P.Garraghan, R.Yang*, Z.Wen, A.Romanovsky, J.Xu, R.Buyya, R.Ranjan. Emergent Failures: Rethinking Cloud Reliability at Scale. IEEE Cloud Computing, 2018  </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; X.Sun, C.Hu, R.Yang*, P.Garraghan, T.Wo, J.Xu, J.Zhu, C.Li.  ROSE: Cluster Resource Scheduling via Speculative Over-subscription, IEEE ICDCS 2018  </span></p>
 
