--- a/publications.html
+++ b/publications.html
@@ -96,9 +96,14 @@
 
 
 <p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red">2019 </span></p>
-<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[b2] Fog Orchestration and Simulation for IoT Services <a href="">[paper]</a>  &nbsp;</span></p>
+
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title"> [b3] Digitalizing Enterprise Application over Clouds: from Business Model to Cloud-Based Implementation  <a href="">[chapter]</a>  &nbsp;</span></p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> Book Chapter,  World Scientific Reference on Digital Data-Centric Platforms in the Age of IOT: Emerging Innovative Technology, Management, Business and Economic Issues,  2019 (to appear) </span> </p>
+ <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em> <strong>Renyu Yang</strong>, Zhao Zhao,  Jin Ouyang, Jie Xu &nbsp;</em></span><em>&nbsp;</em>&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;</p>
+
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[b2] Fog Orchestration and Simulation for IoT Services <a href="">[chapter]</a>  &nbsp;</span></p>
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> Book Chapter, Fog and Fogonomics
-Challenges and Practices of Fog Computing, Networking, Strategy, and Economics,  Wiley, 2019 (in press) </span> </p>
+Challenges and Practices of Fog Computing, Networking, Strategy, and Economics,  Wiley, 2019 (to appear) </span> </p>
  <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em> <strong>Renyu Yang</strong>, Zhenyu Wen,  David Mckee, Tao Lin, Jie Xu and Peter Garraghan &nbsp;</em></span><em>&nbsp;</em>&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;</p>
 
 
