--- a/publications.html
+++ b/publications.html
@@ -97,8 +97,8 @@
 
 <p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red">2019 </span></p>
 
-<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title"> [b3] Digitalizing Enterprise Application over Clouds: from Business Model to Cloud-Based Implementation  <a href="">[chapter]</a>  &nbsp;</span></p>
-<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> Book Chapter,  World Scientific Reference on Digital Data-Centric Platforms in the Age of IOT: Emerging Innovative Technology, Management, Business and Economic Issues,  2019 (to appear) </span> </p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title"> [b3] Cloud Evolution: Enterprise-Wide Digitalization over Clouds   <a href="">[chapter]</a>  &nbsp;</span></p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> Book Chapter,  World Scientific Reference on Digital Data-Centric Platforms in the Age of IoT,  2019 (to appear) </span> </p>
  <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em> <strong>Renyu Yang</strong>, Zhao Zhao,  Jin Ouyang, Jie Xu &nbsp;</em></span><em>&nbsp;</em>&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;</p>
 
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[b2] Fog Orchestration and Simulation for IoT Services <a href="">[chapter]</a>  &nbsp;</span></p>
