--- a/publications.html
+++ b/publications.html
@@ -79,6 +79,7 @@
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp; <span class="incline"> Notice: The copyright of these papers is with the respective publishers. It is being reproduced here for timely dissemination of scholarly information.   </span> &nbsp; &nbsp;</p>
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp; <span class="incline"> NOTE: * = the correspondence author of papers with my supervised students or team members </span> &nbsp; &nbsp;</p>
 
+<p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red">Preprint </span></p>
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[w00]   GA-Par: a Dependable Microservice Orchestration Framework for Geo-distributed Clouds
  <a href="">[paper]</a>  </span></p>
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline">  submitted to IEEE Transactions on Parallel and Distributed Systems  </span> &nbsp; &nbsp;</p>
