--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
 
 <p class="Bolder">&nbsp;&nbsp;&nbsp;  Short Bio &nbsp;</p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  I am currently the head of the scheduling topic at Edgetic Ltd. UK and a research fellow with the school of computing, University of Leeds, UK.  I am also a visiting research scientist with the <a href="http://www.bdbc.org.cn/?lang=en">Big Data and Brain Computing Research Center (BDBC)</a>, <a href="http://www.buaa.edu.cn">Beihang University (aka. BUAA)</a>, China.
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  I am currently the head of the scheduling topic at Edgetic Ltd. UK and a research fellow with the school of computing, University of Leeds, UK.  I am also a visiting research scientist with the <a href="http://www.bdbc.org.cn/?lang=en">Big Data and Brain Computing Research Center (BDBC)</a>, Beijing, China.
 I led several China national or international projects in terms of distributed resource scheduling, cloud storage and geo-distributed data processing for intelligent decision making and massive-scale data analysis. We are building large-scale resource management infrastructures and system profiling framework to support those functionalities. My research mainly focuses on: 
 1) scalable and intelligent resource scheduling at Internet scale; 
 2) dependable service provisioning by leveraging effective system failover, long-tail task mitigation, and  quantitative reliability modeling etc.; 
@@ -170,7 +170,7 @@ I has published more than 25 peer-reviewed papers in the field of distributed sy
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; 2016.4-2016.4: &nbsp; Visiting Researcher (work with Dr. Zhenyu Wen), &nbsp; University of Edinburgh, UK &nbsp;&nbsp; </span></p> 
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; 2017.3 - 2018.2: &nbsp;&nbsp; Research Scientist and Project Director, BDBC, Beihang University, China &nbsp;&nbsp;</span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; 2017.3 - 2018.2: &nbsp;&nbsp; Research Scientist and Project Director, Big Data and Brain Computing Research Center (BDBC), Beijing, China &nbsp;&nbsp;</span></p>
  
  
 
@@ -222,10 +222,10 @@ I has published more than 25 peer-reviewed papers in the field of distributed sy
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; [5]  ChinaCloud Phase I: Resource Virtualization and Scheduling (No. 2011AA01A202),  supported by National 863 Hi-Tech Research and Development Programme, Key Member, 2011.9 - 2013.12 </span></p> 
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; [Misc] Nature Science Foundation of China (91118008, 90818028, 61170294)</span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; [Misc] Nature Science Foundation of China (91118008, 90818028, 6117029 4)</span></p>
 
 
-<p><span class="Bolder">&nbsp;&nbsp;&nbsp; Co-advised Students within MSDS Research Team </span></p>
+<p><span class="Bolder">&nbsp;&nbsp;&nbsp; Co-advised Students in MSDS Research Team </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  PostDoc researcher: Dr. Qi Shen (2017.9 - ) </span>&nbsp;&nbsp;</p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  PhD students: Jianyong Zhu (2017.5 - ) </span>&nbsp;&nbsp;</p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Master student: Junqing Xiao, Ximing Qu (2016.9 - ), Kaiyang Shao (2017.9 - ), Shiqing Xue (2018.9)  </span>&nbsp;&nbsp;</p>
