update and fontsize bugfix

--- a/publications.html
+++ b/publications.html
@@ -18,6 +18,7 @@
 	{font-size:24px}
 .incline
 	{font-style:italic;
+	 font-size:12pt;
 	 font-family:Arial,"\6977 \4F53 "}
 .bolder
 	{font-weight:bold}
@@ -43,7 +44,7 @@
 	font-weight: bold;
 	font-family:Arial,"\6977 \4F53 "}
 .style11
-	{text-align:left;16:48 2016/3/23
+	{text-align:left;
 	font-size:12pt;
 	font-family:Arial,"\6977 \4F53 "}
 .style12
