--- a/index.html
+++ b/index.html
@@ -228,13 +228,17 @@ I has published more than 25 peer-reviewed papers in the field of distributed sy
 
 <p><span class="Bolder">&nbsp;&nbsp;&nbsp; Co-advised Students in MSDS Research Team </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  PostDoc researcher: Dr. Qi Shen (2017.9 - ) </span>&nbsp;&nbsp;</p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  PhD students: Jianyong Zhu (2017.5 - ) </span>&nbsp;&nbsp;</p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  PhD students: Jianyong Zhu (2017.5 - , Beihang Uni.), Xiaoyang Sun (2019.9 - , Uni of Leeds) </span>&nbsp;&nbsp;</p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Master student: Kaiyang Shao (2017.9 - ), Shiqing Xue (2018.9 - )  </span>&nbsp;&nbsp;</p>
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Alumni </span>&nbsp;&nbsp;</p>
+
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Junqing Xiao (M.Sc, 2016.9-2018.12, first employment at Alibaba Group)</span></p> 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Ximing Qu (M.Sc, 2016.9-2018.12, first employment at Alibaba Group) </span></p> 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Xiaoyang Sun (M.Sc, 2015.9-2018.3, now on leave for Ph.D study) </span></p> 
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Xiaoyang Sun (M.Sc, 2015.9-2018.3, PhD student at Uni. of Leeds. UK) </span></p> 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Lian Du (M.Sc, 2015.9-2018.3, first employment at Alibaba Cloud Inc.) </span></p> 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Xixu Wang (M.Sc, 2014.9-2017.3, first employment at Baidu Inc.) </span></p> 
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Michael Hao Tong (B.Sc, 2012.9-2014.6, PhD student at Uni. of Chicago, US) </span></p> 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Yuda Wang (M.Sc, 2012.9-2015.3, first employment at China Telecom.) </span></p> 
 
 
