--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 </a> 
 
 <p class="Bolder">&nbsp;&nbsp;&nbsp;  What's new </p>
-<p><span class="red">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; [TOP] Call for Papers:  <a href="https://jointcloud.github.io/jcc2019/cfp/" >IEEE JCC 2019</a> </span></p>
+<p><span class="red">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; [TOP] Call for Participation:  <a href="https://jointcloud.github.io/jcc2019" > IEEE JCC 2019</a> </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (01/10/2018) The chapter entitled "Fog Orchestration and Simulation for IoT Services" is accepted to publish in the book of "Fog and Fogonomics: Challenges and Practices of Fog Computing, Networking, Strategy, and Economics"  by Wiley . </span></p>
 
@@ -176,9 +176,9 @@ I has published more than 25 peer-reviewed papers in the field of distributed sy
  
 
 <p><span class="Bolder">&nbsp;&nbsp;&nbsp; Research Interests</span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Massive-scale distributed systems for big data, cloud computing and IoT </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Massive-scale distributed systems of big data, cloud computing and IoT </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; > Resource management, cluster scheduling, fault tolerance, dependability </span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; > Large-scale system profiling, data-driven optimization </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; > Large-scale system profiling, log analysis, data-driven optimization </span></p>
 
 
 
@@ -226,13 +226,13 @@ I has published more than 25 peer-reviewed papers in the field of distributed sy
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; [Misc] Nature Science Foundation of China (91118008, 90818028, 6117029 4)</span></p>
 
 
-<p><span class="Bolder">&nbsp;&nbsp;&nbsp; Co-advised Students in MSDS Research Team </span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  PostDoc researcher: Dr. Qi Shen (2017.9 - ) </span>&nbsp;&nbsp;</p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  PhD students: Jianyong Zhu (2017.5 - , Beihang Uni.), Xiaoyang Sun (2019.9 - , Uni of Leeds) </span>&nbsp;&nbsp;</p>
+<p><span class="Bolder">&nbsp;&nbsp;&nbsp; Co-advising in MSDS Research Team </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Current </span>&nbsp;&nbsp;</p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Postdoc researcher: Dr. Qi Shen (2017.9 - ) </span>&nbsp;&nbsp;</p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  PhD student: Jianyong Zhu (2017.5 - , Beihang Uni.), Xiaoyang Sun (2019.9 - , Uni of Leeds) </span>&nbsp;&nbsp;</p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Master student: Kaiyang Shao (2017.9 - ), Shiqing Xue (2018.9 - )  </span>&nbsp;&nbsp;</p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Alumni </span>&nbsp;&nbsp;</p>
-
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Junqing Xiao (M.Sc, 2016.9-2018.12, first employment at Alibaba Group)</span></p> 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Ximing Qu (M.Sc, 2016.9-2018.12, first employment at Alibaba Group) </span></p> 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Xiaoyang Sun (M.Sc, 2015.9-2018.3, PhD student at Uni. of Leeds. UK) </span></p> 
@@ -297,7 +297,7 @@ I has published more than 25 peer-reviewed papers in the field of distributed sy
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  </span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  updated by 18th October, 2018 </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  updated by Jan., 2019 </span></p>
 
 </body>
 </html>
