--- a/publications.html
+++ b/publications.html
@@ -88,20 +88,16 @@
 
 
 
-<p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red">2019 </span></p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red">2018 </span></p>
 
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title"> [b3] Cloud Evolution: Enterprise-Wide Digitalization over Clouds   <a href="">[chapter]</a>  &nbsp;</span></p>
-<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> Book Chapter,  World Scientific Reference on Digital Data-Centric Platforms in the Age of IoT,  2019 (to appear) </span> </p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> Book Chapter,  World Scientific Reference on Digital Data-Centric Platforms (to appear) </span> </p>
  <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em> <strong>Renyu Yang</strong>, Zhao Zhao,  Jin Ouyang, Jie Xu &nbsp;</em></span><em>&nbsp;</em>&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;</p>
 
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[b2] Fog Orchestration and Simulation for IoT Services <a href="">[chapter]</a>  &nbsp;</span></p>
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> Book Chapter, Fog and Fogonomics
-Challenges and Practices of Fog Computing, Networking, Strategy, and Economics,  Wiley, 2019 (to appear) </span> </p>
+Challenges and Practices of Fog Computing, Networking, Strategy and Economics,  Wiley (to appear) </span> </p>
  <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em> <strong>Renyu Yang</strong>, Zhenyu Wen,  David Mckee, Tao Lin, Jie Xu and Peter Garraghan &nbsp;</em></span><em>&nbsp;</em>&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;</p>
-
-
-
-<p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red">2018</span></p>
 
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[j5]  Emergent Failures: Rethinking  Cloud Reliability at Scale <a href="paper/ieeecloud2018.pdf">[paper]</a>  &nbsp;</span></p>
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline"> IEEE Cloud Computing, 2018, IEEE Computer Society (SCI-IF = 2.929)  </span> &nbsp; &nbsp;</p> <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em> Peter Garraghan, <strong>Renyu Yang*</strong>, Zhenyu Wen,  Alexander Romanovsky, Jie Xu, Rajkumar Buyya, Rajiv Ranjan &nbsp;</em></span><em>&nbsp;</em>&nbsp;  &nbsp;&nbsp; &nbsp;&nbsp;</p>
