--- a/publications.html
+++ b/publications.html
@@ -81,11 +81,15 @@
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp; <span class="incline"> NOTE: * = the correspondence author of papers with my supervised students or team members </span> &nbsp; &nbsp;</p>
 
 <p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red">Preprint </span></p>
-<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[w00]   GA-Par: a Dependable Microservice Orchestration Framework for Geo-distributed Clouds
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[w00] GA-Par: a Dependable Microservice Orchestration Framework for Geo-distributed Clouds
  <a href="">[paper]</a>  </span></p>
-<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline">  submitted to IEEE Transactions on Parallel and Distributed Systems  </span> &nbsp; &nbsp;</p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline">  major revision, IEEE Transactions on Parallel and Distributed Systems  </span> &nbsp; &nbsp;</p>
  <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em> Zhenyu Wen, Tao Lin, <strong>Renyu Yang*</strong>, Shouling Ji, Rajiv Ranjan, Alexander Romanovsky, Changting Lin, Jie Xu &nbsp;</em>&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;</p>
 
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[w00] Effective Cluster Scheduling via Speculative Resource Over-subscription 
+ <a href="">[paper]</a>  </span></p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline">  under submission, IEEE Transactions on Parallel and Distributed Systems </span> &nbsp; &nbsp;</p>
+ </span> &nbsp; &nbsp;</p> <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em> <strong>Renyu Yang</strong>, Chunming Hu*, Xiaoyang Sun, Peter Garraghan, Tianyu Wo, Jie Xu &nbsp;</em></span><em>&nbsp;</em>&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;</p>
 
 
 <p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red">2018 </span></p>
