--- a/publications.html
+++ b/publications.html
@@ -89,7 +89,7 @@
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="blue_paper_title">[w00] Effective Cluster Scheduling via Speculative Resource Over-subscription 
  <a href="">[paper]</a>  </span></p>
 <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="incline">  under submission, IEEE Transactions on Parallel and Distributed Systems </span> &nbsp; &nbsp;</p>
- </span> &nbsp; &nbsp;</p> <p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em> <strong>Renyu Yang</strong>, Chunming Hu*, Xiaoyang Sun, Peter Garraghan, Tianyu Wo, Jie Xu &nbsp;</em></span><em>&nbsp;</em>&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;</p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; <span class="style11"><em> <strong>Renyu Yang</strong>, Chunming Hu*, Xiaoyang Sun, Peter Garraghan, Tianyu Wo, Jie Xu &nbsp;</em></span><em>&nbsp;</em>&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;</p>
 
 
 <p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red">2018 </span></p>
