--- a/index.html
+++ b/index.html
@@ -155,6 +155,12 @@ I has published more than 25 peer-reviewed papers in the field of distributed sy
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;   I obtained my B.Sc. and Ph.D. from School of Computing, <a href="http://www.buaa.edu.cn">Beihang University </a>, China  in June 2011 and January 2017 respectively.   In the past few years, I had been working both in the Networked Computing Group (NCG) in Beihang University and Distributed Systems and Services (DSS) lab in the University of Leeds.  I was the founder and team lead of SIGRS (Special Interest Group on Resource Scheduling) and MSDS (Massive-Scale Distributed Systems) research group at Beihang University.  I had led several UK-China research collaborations including the COLAB (short for Leeds, Alibaba, Beihang) project and developed strong links with the UK Computer Science community (such as University of Leeds, University of Edinburgh, Lancaster University etc.). During 2014 to 2016, I also joined Fuxi the Distributed Resource Scheduling Group in Alibaba Cloud Inc., participating in the development and research on cloud system issues at Internet scale.  I am a member of&nbsp;<a href="http://www.acm.org" target="_blank">ACM</a>, IEEE and&nbsp;<a href="http://www.ccf.org.cn">CCF(China Computer Federation)</a>.
 </span></p>
 
+<p><span class="Bolder">&nbsp;&nbsp;&nbsp; Research Interests</span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Massive-scale distributed systems of big data, cloud computing and IoT </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; > Play with distributed systems to improve the efficiency and reliability: resource management, cluster scheduling, fault tolerance, dependability </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; > Play with data: system profiling, log analysis, data-driven optimization </span></p>
+
+
 
 <p><span class="Bolder">&nbsp;&nbsp;&nbsp; Education </span></p>
 
@@ -175,10 +181,6 @@ I has published more than 25 peer-reviewed papers in the field of distributed sy
  
  
 
-<p><span class="Bolder">&nbsp;&nbsp;&nbsp; Research Interests</span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Massive-scale distributed systems of big data, cloud computing and IoT </span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; > Resource management, cluster scheduling, fault tolerance, dependability </span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; > Large-scale system profiling, log analysis, data-driven optimization </span></p>
 
 
 
