--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ I has published more than 25 peer-reviewed papers in the field of distributed sy
 
 <p><span class="Bolder">&nbsp;&nbsp;&nbsp; Research Interests</span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; Massive-scale distributed systems of big data, cloud computing and IoT </span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; > Play with distributed systems to improve the efficiency and reliability: resource management, cluster scheduling, fault tolerance, dependability </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; > Play distributed systems to improve the efficiency and reliability: resource management, cluster scheduling, fault tolerance, dependability </span></p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; > Play with data: system profiling, log analysis, data-driven optimization </span></p>
 
 
