--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
 &nbsp;
 </div>
 <p class="STYLE16">&nbsp;&nbsp;&nbsp;&nbsp; "I find that the harder I work, the more luck I seem to have."  - Thomas Jefferson</p>
-<p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Research Scientist, Lead R&D Engineer, Edgetic Ltd., UK </p>
-<p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Research Fellow, School of Computing, <a href="http://www.leeds.ac.uk">University of Leeds</a>, UK </p>
+<p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Research Scientist, Edgetic Ltd., UK </p>
+<p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Research Fellow, School of Computing, <a href="http://www.leeds.ac.uk">University of Leeds</a>, UK </p>
 
 <!-- p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Research Scientist, <a href="http://www.bdbc.org.cn/?lang=en">Big Data and Brain Computing Research Center(BDBC)</a>, <a href="http://www.buaa.edu.cn">Beihang University (aka. BUAA)</a>, China </p -->
 
