--- a/index.html
+++ b/index.html
@@ -229,12 +229,12 @@ I has published more than 25 peer-reviewed papers in the field of distributed sy
 
 
 <p><span class="Bolder">&nbsp;&nbsp;&nbsp; Co-advising in MSDS Research Team </span></p>
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Current </span>&nbsp;&nbsp;</p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  > Current </span>&nbsp;&nbsp;</p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Postdoc researcher: Dr. Qi Shen (2017.9 - ) </span>&nbsp;&nbsp;</p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  PhD student: Jianyong Zhu (2017.5 - , Beihang Uni.), Xiaoyang Sun (2019.9 - , Uni of Leeds) </span>&nbsp;&nbsp;</p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Master student: Kaiyang Shao (2017.9 - ), Shiqing Xue (2018.9 - )  </span>&nbsp;&nbsp;</p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Alumni </span>&nbsp;&nbsp;</p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  > Alumni </span>&nbsp;&nbsp;</p>
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Junqing Xiao (M.Sc, 2016.9-2018.12, first employment at Alibaba Group)</span></p> 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Ximing Qu (M.Sc, 2016.9-2018.12, first employment at Alibaba Group) </span></p> 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  Xiaoyang Sun (M.Sc, 2015.9-2018.3, PhD student at Uni. of Leeds. UK) </span></p> 
