--- a/publications.html
+++ b/publications.html
@@ -18,13 +18,14 @@
 	{font-size:24px}
 .incline
 	{font-style:italic;
-	 font-size:12pt;
+	 font-size:12.5pt;
 	 font-family:Arial,"\6977 \4F53 "}
 .bolder
 	{font-weight:bold}
 .red
 	{text-align:justify;
 	font-size:12pt;
+	font-weight: bold;
 	font-family:Arial,"\6977 \4F53 ";
 	color:#F00}
 .blue_paper_title
@@ -77,8 +78,8 @@
 	<a href="./publications_topics.html">[topics]</a>
 	<a href="./publications.html">[years] </a></span>&nbsp;&nbsp; &nbsp;&nbsp;</p>
 
-<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp; <span class="incline"> Notice: The copyright of these papers is with the respective publishers. It is being reproduced here for timely dissemination of scholarly information.   </span> &nbsp; &nbsp;</p>
-<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp; <span class="incline"> NOTE: * = the correspondence author of papers with my supervised students or team members </span> &nbsp; &nbsp;</p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  <span class="incline"> Notice: The copyright of these papers is with the respective publishers. It is being reproduced here for timely dissemination of scholarly information.   </span> &nbsp; &nbsp;</p>
+<p lang="en-US">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  <span class="incline"> * = the correspondence author of papers with my supervised students or team members </span> &nbsp; &nbsp;</p>
 
 <p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red">2018 </span></p>
 
