--- a/publications.html
+++ b/publications.html
@@ -130,7 +130,7 @@
 
 <p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red">2016 </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;   P.Garraghan, X.Ouyang, R.Yang*, D.McKee, J.Xu. Straggler Root-cause and Impact Analysis for Massive-scale Virtualized Cloud Datacenters, in IEEE Trans. on Services Computing(TSC) (SCI-IF = 4.418, Q1) <a href="paper/tsc2016-b.pdf">[paper]</a>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;   P.Garraghan, X.Ouyang, R.Yang*, D.McKee, J.Xu. Straggler Root-cause and Impact Analysis for Massive-scale Virtualized Cloud Datacenters, in IEEE Trans. on Services Computing(TSC) (SCI-IF = 4.418, Q1) <a href="paper/tsc2016b.pdf">[paper]</a>
 </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  C.Hu, X.Wang, R.Yang and T.Wo. ScalaRDF: a Distributed, Elastic and Scalable In-Memory RDF Triple Store. in the 22th IEEE ICPADS 2016 <a href="paper/icpads2016.pdf">[paper]</a>
