--- a/publications_topics.html
+++ b/publications_topics.html
@@ -126,7 +126,7 @@
 <a href="paper/tsc2016.pdf">[paper]</a> 
 </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;   P.Garraghan, X.Ouyang, R.Yang*, D.McKee, J.Xu. Straggler Root-cause and Impact Analysis for Massive-scale Virtualized Cloud Datacenters, in IEEE Trans. on Services Computing(TSC),2017 (SCI-IF = 4.418, Q1) <a href="paper/tsc2016-b.pdf">[paper]</a>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;   P.Garraghan, X.Ouyang, R.Yang*, D.McKee, J.Xu. Straggler Root-cause and Impact Analysis for Massive-scale Virtualized Cloud Datacenters, in IEEE Trans. on Services Computing(TSC),2017 (SCI-IF = 4.418, Q1) <a href="paper/tsc2016b.pdf">[paper]</a>
 </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  X.Ouyang, P.Garraghan, R.Yang, P.Townend, and J.Xu. Reducing Late-Timing Failure at Scale: Straggler Root-Cause Analysis in Cloud Datacenters, in the 46th IEEE/IFIP DSN 2016 (short) <a href="paper/dsn2016.pdf">[paper]</a>
