upload case study

--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
 &nbsp;
 </div>
 <p class="STYLE16">&nbsp;&nbsp;&nbsp;&nbsp; "I find that the harder I work, the more luck I seem to have."  - Thomas Jefferson</p>
-<p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Research Scientist, Edgetic Ltd., UK </p>
-<p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Research Fellow, School of Computing, <a href="http://www.leeds.ac.uk">University of Leeds</a>, UK </p>
+<p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Research Scientist, <a href="https://www.edgetic.com">Edgetic</a>, UK </p>
+<p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Research Fellow, School of Computing, <a href="http://www.leeds.ac.uk"> University of Leeds</a>, UK </p>
 
 <!-- p class="STYLE17">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Research Scientist, <a href="http://www.bdbc.org.cn/?lang=en">Big Data and Brain Computing Research Center(BDBC)</a>, <a href="http://www.buaa.edu.cn">Beihang University (aka. BUAA)</a>, China </p -->
 
@@ -130,7 +130,10 @@
 </a> 
 
 <p class="Bolder">&nbsp;&nbsp;&nbsp;  What's new </p>
-<p><span class="red">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; [TOP] Call for Participation:  <a href="https://jointcloud.github.io/jcc2019" > IEEE JCC 2019</a> </span></p>
+<p><span class="red">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; [TOP] Call for Participation:  <a href="https://jointcloud.github.io/jcc2019" >IEEE JCC 2019</a> in San Francisco, April, 2019 </span></p>
+
+<p><span class="red">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (02/2019) Edgetic datacentre management solution and preliminary case study <a href="https://www.edgetic.com" >link</a> </span></p>
+
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (01/10/2018) The chapter entitled "Fog Orchestration and Simulation for IoT Services" is accepted to publish in the book of "Fog and Fogonomics: Challenges and Practices of Fog Computing, Networking, Strategy, and Economics"  by Wiley . </span></p>
 
