--- a/news.html
+++ b/news.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-
+<meta http-equiv="Content-Type" content="text/html; charset=us-ascii">
         <meta http-equiv="Content-Type" content="text/html; charset=gb2312">
         <meta charset="utf-8">
 <style type="text/css">
@@ -140,6 +140,31 @@
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (28/09/2017) The work of efficient resource overselling was accepted by ACM SOSP 2017 poster session. </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (08/11/2017) I moved to University of Leeds UK as a research fellow. </span></p>
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (18/11/2017) I was awarded the Grand Class of Scientific and Technological Progress Award of Chinese Institute of Electronics of year 2017 （2017中国电子学会科技进步特等奖） for the key participation and contributions to the reliable resource management and scheduling. The joint project is led by Alibaba Cloud, Beihang University and Tsinghua University. </span></p>
+
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (05/04/2018) The work of "ROSE: Cluster Resource Scheduling via Speculative Over-subscription" is accepted as a full paper and will appear in IEEE ICDCS 2018. Big Congrats!  </span></p>
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (16/07/2018) I has been invited to serve as IEEE JCC 2019 PC co-chair. </span></p>
+
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (01/10/2018) The chapter entitled "Fog Orchestration and Simulation for IoT Services" is accepted to publish in the book of "Fog and Fogonomics: Challenges and Practices of Fog Computing, Networking, Strategy, and Economics"  by Wiley . </span></p>
+
+
+<p><span class="red">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp; (02/2019) Edgetic datacentre management solution and preliminary case study <a href="https://www.edgetic.com" >link</a> </span></p>
+
+
+
+
+
+
+
+
+
+
+
+
 
 </body>
 </html>
