--- a/publications_topics.html
+++ b/publications_topics.html
@@ -146,7 +146,7 @@
 <p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red"> Big Data Applications </span></p>
 
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; R.Yang, Z.Zhao, J. Ouyang, J.Xu. Cloud Evolution: Enterprise-Wide Digitalization over Clouds. Book Chapter, World Scientific Reference on Digital Data-Centric Platforms, in press </span></p>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; R.Yang, Z.Zhao, J. Ouyang, J.Xu. Cloud Evolution: Enterprise-Wide Digitalization over Clouds. Book Chapter, World Scientific Reference on Digital Data-Centric Platforms in the Age of IoT (invited chapter and in press) </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; Y.Zhang, M.Zhang, T.Wo, X.Lin, R.Yang, J.Xu. A Scalable lnternet-of-Vehicles Service over Joint Clouds. in the 9th IEEE JCC 2018 <a href="paper/jcc2018.pdf">[paper]</a>
 </span></p>
