--- a/publications_topics.html
+++ b/publications_topics.html
@@ -118,11 +118,10 @@
 
 <p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red"> Dependability: Reliability and Fault Tolerance </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; R.Yang, Y.Zhang, P.Garraghan, Y.Feng, J.Ouyang, J.Xu, Z.Zhang, C.Li. Reliable Cloud Service in Massive-scale Systems through Effective Low-cost Failover. in IEEE Trans. on Services Computing(TSC), 2017 (SCI-IF = 4.418, Q1)  
-<a href="paper/tsc2016.pdf">[paper]</a> 
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; R.Yang, Y.Zhang, P.Garraghan, Y.Feng, J.Ouyang, J.Xu, Z.Zhang, C.Li. Reliable Cloud Service in Massive-scale Systems through Effective Low-cost Failover. in IEEE Trans. on Services Computing(TSC), 2017 (SCI-IF = 4.418, Q1) <a href="paper/tsc2016.pdf">[paper]</a> 
 </span></p>
 
-<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;   &bull; P.Garraghan, X.Ouyang, R.Yang*, D.McKee, J.Xu. Straggler Root-cause and Impact Analysis for Massive-scale Virtualized Cloud Datacenters, in IEEE Trans. on Services Computing(TSC),2017 (SCI-IF = 4.418, Q1) <a href="paper/tsc2016b.pdf">[paper]</a>
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;   &bull; P.Garraghan, X.Ouyang, R.Yang*, D.McKee, J.Xu. Straggler Root-cause and Impact Analysis for Massive-scale Virtualized Cloud Datacenters, in IEEE Trans. on Services Computing(TSC), 2017 (SCI-IF = 4.418, Q1) <a href="paper/tsc2016b.pdf">[paper]</a>
 </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; X.Ouyang, P.Garraghan, R.Yang, P.Townend, and J.Xu. Reducing Late-Timing Failure at Scale: Straggler Root-Cause Analysis in Cloud Datacenters, in the 46th IEEE/IFIP DSN 2016 (short) <a href="paper/dsn2016.pdf">[paper]</a>
