--- a/publications_topics.html
+++ b/publications_topics.html
@@ -114,9 +114,16 @@
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; W.Wang, C.Hu, T.Wo and R.Yang*. YarnPlus: A Yarn Based Framework for Fine-Grained Resource Sharing in Heterogeneous Computing Environments, in the 11th CCF CNCC 2013, <a href="paper/cncc2013.pdf">[paper]</a>
 </span></p>
 
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; S.Xue, C.Hu, J.Zhu, R.Yang*. Shaready: A Resource-Isolated Workload Co-Location System. in the 13th IEEE SOSE, 2019 </span></p>
+
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; P.Townend, S.J.Clement, D.Burdett, R.Yang*, J.Shaw, B.Slater, J.Xu. Improving Data Center Efficiency Through Holistic Scheduling In Kubernetes. in the 13th IEEE SOSE, 2019 </span></p>
 
 
 <p lang="en-US">&nbsp;&nbsp;&nbsp; &nbsp; <span class="red"> Dependability: Reliability and Fault Tolerance </span></p>
+
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; Z.Wen, T.Lin, R.Yang*, S.Ji, R.Ranjan, A.Romanovsky, J.Xu, C.Lin. GA-Par: Dependable Microservice Orchestration Framework for Geo-Distributed Clouds, 
+IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019  </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; R.Yang, Y.Zhang, P.Garraghan, Y.Feng, J.Ouyang, J.Xu, Z.Zhang, C.Li. Reliable Cloud Service in Massive-scale Systems through Effective Low-cost Failover. in IEEE Trans. on Services Computing(TSC), 2017 (SCI-IF = 4.418, Q1) <a href="paper/tsc2016.pdf">[paper]</a> 
 </span></p>
@@ -135,6 +142,7 @@
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &bull; X.Ouyang, C.Wang, R.Yang, P.Towend, J.Xu. ML-NA: a Machine Learning based Node Performance Analyzer Utilizing Straggler Statistics. In the 23th IEEE ICPADS 2017 <a href="paper/icpads2017.pdf">[paper]</a>
 </span></p>
+
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; R.Yang, J.Ouyang, C.Hu. Fail at Scale. Communications of CCF, 2016 (In Chinese) <a href="paper/ccfcomm2016.pdf">[paper]</a>
 </span></p>
@@ -176,6 +184,8 @@ A Method for Private Car Transportation Dispatching Based on a Passenger Demand 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; L.Cui, J.Li, T.Wo, B.Li, R.Yang, Y.Cao, J.Huai. HotRestore: A Fast Restore System for Virtual Machine Cluster, in the 28th USENIX Large Installation System Administration Conference (LISA 2014) <a href="paper/lisa2014.pdf">[paper]</a>
 </span></p>
 
+<p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; P.Liu, R.Yang*, J.Sun, X.Liu.
+SysOptic: A Fine-Grained Monitoring System for Virtual Machines Based on PMU. in the 13th IEEE SOSE, 2019 </span></p>
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;  &bull; Y.Huang, R.Yang, L.Cui, T.Wo, C.Hu, B.Li. VMCSnap: Taking Snapshots of Virtual Machine Cluster with Memory Deduplication. in the 8th IEEE SOSE 2014<a href="paper/ivce2014.pdf">[paper]</a>
 </span></p>
